# opencode-practise

./: .gitignore  AGENTS.md  README.md  opencode.json  opencode_deep_dive.md  pyproject.toml  实战指南.md
.opencode/skills/api-design/: SKILL.md
.opencode/skills/reviewer/: SKILL.md
src/: __init__.py  database.py  main.py  models.py  routes.py  schemas.py
